WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130590
Invalidate sibling text node style when needed instead of attaching synchronously
https://bugs.webkit.org/show_bug.cgi?id=130590
Summary
Invalidate sibling text node style when needed instead of attaching synchrono...
Antti Koivisto
Reported
2014-03-21 07:04:36 PDT
Simplify the code
Attachments
patch
(13.15 KB, patch)
2014-03-21 07:11 PDT
,
Antti Koivisto
kling
: review-
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion
(524.01 KB, application/zip)
2014-03-21 08:38 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2
(675.64 KB, application/zip)
2014-03-21 09:10 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(521.69 KB, application/zip)
2014-03-21 09:36 PDT
,
Build Bot
no flags
Details
patch 2
(13.54 KB, patch)
2014-03-24 05:22 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-03-21 07:11:08 PDT
Created
attachment 227431
[details]
patch
Build Bot
Comment 2
2014-03-21 08:37:58 PDT
Comment on
attachment 227431
[details]
patch
Attachment 227431
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6365422215495680
New failing tests: fullscreen/full-screen-fixed-pos-parent.html editing/pasteboard/merge-end-blockquote.html editing/inserting/5002441.html editing/input/password-echo-passnode2.html http/tests/media/track/track-webvtt-slow-loading.html editing/input/password-echo-passnode.html
Build Bot
Comment 3
2014-03-21 08:38:00 PDT
Created
attachment 227437
[details]
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 4
2014-03-21 09:10:04 PDT
Comment on
attachment 227431
[details]
patch
Attachment 227431
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5179862528557056
New failing tests: fullscreen/full-screen-fixed-pos-parent.html editing/pasteboard/merge-end-blockquote.html editing/inserting/editing-empty-divs.html editing/inserting/5002441.html editing/pasteboard/smart-paste-002.html editing/input/password-echo-passnode2.html http/tests/media/track/track-webvtt-slow-loading.html editing/input/password-echo-passnode.html editing/inserting/insert-paragraph-separator-tab-span.html
Build Bot
Comment 5
2014-03-21 09:10:07 PDT
Created
attachment 227441
[details]
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2014-03-21 09:36:33 PDT
Comment on
attachment 227431
[details]
patch
Attachment 227431
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6509343885230080
New failing tests: fullscreen/full-screen-fixed-pos-parent.html editing/pasteboard/merge-end-blockquote.html editing/inserting/5002441.html editing/input/password-echo-passnode2.html http/tests/media/track/track-webvtt-slow-loading.html editing/input/password-echo-passnode.html
Build Bot
Comment 7
2014-03-21 09:36:35 PDT
Created
attachment 227447
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Andreas Kling
Comment 8
2014-03-22 14:27:47 PDT
Comment on
attachment 227431
[details]
patch Looks like this breaks some password echo tests.
Antti Koivisto
Comment 9
2014-03-24 05:22:52 PDT
Created
attachment 227638
[details]
patch 2
Andreas Kling
Comment 10
2014-03-24 07:51:38 PDT
Comment on
attachment 227638
[details]
patch 2 r=me
Antti Koivisto
Comment 11
2014-03-24 09:52:39 PDT
https://trac.webkit.org/r166173
https://trac.webkit.org/r166174
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug